apps/platform/grafana/in-cluster/overlays/tooling/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-1
  namespace: tooling
spec:
  hostnames:
  - grafana.mnm-solutions.de
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: tls-gateway
    namespace: default
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: grafana
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
